experimental/ir/testdata/options/builtin.proto.stderr.txt
error: option `deprecated` set multiple times
  --> testdata/options/builtin.proto:24:12
   |
23 |     option deprecated = true;
   |            ---------- first set here...
24 |     option deprecated = true;
   |            ^^^^^^^^^^ ... also set here
   = note: an option may be set at most once

encountered 1 error
